Update composer json and composer lock

--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,18 @@
     "require": {
         "php": "^7.3|^8.1",
         "barryvdh/laravel-dompdf": "^1.0",
+        "doctrine/dbal": "^4.2",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "harvesthq/chosen": "^1.8",
+        "intervention/image": "2.7",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.10",
         "maatwebsite/excel": "^3.1",
-        "mews/captcha": "^3.2",
         "owen-it/laravel-auditing": "^13.0",
         "realrashid/sweet-alert": "^5.0",
         "webpatser/laravel-uuid": "^4.0",
